# ParallelRender

./: CMakeLists.txt  InputProcessor.cpp  Model.cpp  MyUtil.cpp  OpenGLApp.cpp  main.cpp
Dependency/assimp/: INSTALL_RECEIPT.json
Dependency/assimp/.brew/: assimp.rb
Dependency/assimp/lib/: libIrrXML.dylib
Dependency/glad/: glad.h
Dependency/glad/src/: glad.c
Dependency/glfw/include/GLFW/: glfw3.h
Dependency/glfw/src/: wgl_context.c  win32_window.c  window.c  wl_init.c
Dependency/imgui/: imgui_impl_glfw_gl3.cpp  main.cpp
Dependency/mpich/: INSTALL_RECEIPT.json
Dependency/mpich/.brew/: mpich.rb
Dependency/mpich/include/: mpi.mod  mpi_base.mod  mpi_constants.mod
Dependency/mpich/lib/: libmpi.12.dylib  libmpicxx.12.dylib  libmpifort.12.dylib  libpmpi.12.dylib
Dependency/mpich/lib/pkgconfig/: mpich.pc  openpa.pc
Resources/: config.json
Resources/Shader/Voxel/: simple.gs
include/: Atom.h  Camera.h  IApp.h  IDrawable.h  InputProcessor.h  Mesh.h  Model.h  MyUtil.h  OpenGLApp.h  UI.h  common.h
